--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -2,7 +2,6 @@
 .hero-area {
   position: relative;
   width: 100%;
-  min-height: 80vh;
   display: flex;
   flex-direction: column;
 
@@ -11,13 +10,12 @@
     display: flex;
     align-items: center;
     background-size: cover;
-    background-position: center;
+    background-position: center 45%;
   }
 
-  // Ensure the content is vertically centered
   .inner {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 4rem;
+    padding-bottom: 3.5rem;
   }
 }
 
